<resources>
    <string name="app_name">Twovie Times</string>
    <string name="select_movie_button">Select a movie</string>
    <string name="movies_later_button_text">Later</string>
    <string name="movies_at_text">Movies</string>
    <string name="movies_now_text">Now</string>
    <string name="get_movies">Get Movie Times</string>
    <string name="date_picker_title">Pick a Movie Time</string>
    <string name="select_genre_title">Genre</string>
    <string name="select_movie_title">Movie</string>
    <string name="genre_selector_title">Select:</string>
    <string name="settings_name">Settings</string>
    <string name="movie_matching_title">Matching</string>
    <string name="location">Change Location</string>
    <string name="zip_code">Default Zip Code</string>
    <string name="radius">Default Radius</string>
</resources>
