<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:id="@+id/movies_at_bar"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/movies_at_text"
            android:id="@+id/textView"
            android:layout_column="0"/>

        <CheckBox
            android:layout_marginLeft="20dp"
            android:id="@+id/movies_now_checkbox"
            android:text="@string/movies_now_text"
            android:singleLine="false"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"

            android:layout_gravity="right"
            android:text="@string/movies_later_button_text"
            android:layout_marginRight="20dp"
            android:id="@+id/movies_later_button"
            android:layout_row="0"
            android:layout_column="0"/>


    </GridLayout>

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:id="@+id/select_movies_bar"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/movie_matching_title"
            android:layout_rowWeight="1"
            android:layout_gravity="center_vertical"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_movie_button"
            android:id="@+id/left_genre_button"
            android:layout_rowWeight="1"/>
        <ImageView
            android:src="@drawable/ic_action_plus"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/select_movie_button"
            android:layout_marginRight="10dp"
            android:id="@+id/right_genre_button"
            android:layout_rowWeight="1"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/get_movie_times"
            android:text="@string/get_movies"
            android:layout_gravity="center"/>

    </GridLayout>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/theater_movie_times_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>